# monolithic

./: .gitignore  CMakeLists.txt  README.md  arch-setup.sh  bashrc  dot-animate.py  ethereum-dump.sh  ethereum-sync.sh  g-force.py  gaumerge.py  gt-tool.sh  heatmap.py  llamaload.py  nsg-animate.py  plot-z-index.py  pomodoro.sh  runptx.cu  softatt.py  subcommand.py  tianji.cmake  user-setup.sh  user_configuration.json  xor.py  z-index.py
